examples/c/error-codes/violates-constraint/nonfatal/CV-CDT4-bad-static.output
CV-CDT4-bad-static.c:1:1: error: Field y has incomplete type.
  Constraint violation (CV-CDT4).
   see C11 section 6.7.2.1:3 http://rvdoc.org/C11/6.7.2.1
   see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
   see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1
