examples/c/error-codes/violates-constraint/nonfatal/CV-CDT4-bad-static.c
union s { int x; union s y; };

int main() { }
